--- a/workload/helm3/manifests/workload-spec.yaml
+++ b/workload/helm3/manifests/workload-spec.yaml
@@ -2,6 +2,6 @@ name: wordpress-demo1
 namespace: wordpress
 project: defaultproject
 type: Helm3
-clusters: "demo-eks4"
+clusters: "ranjithsol"
 payload: "./wordpress-9.0.3.tgz"
 values: "./wordpress-values.yaml"
