--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,13 +21,9 @@ steps:
     export RCTL_API_SECRET=$(RCTL_API_SECRET)
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
+    echo "Hello"
     chmod 0755 ${HOME}/rctl
-    LookupWorkload () {
-      local workload match="$1"
-      shift
-      for workload; do [[ "$workload" == "$match" ]] && return 0; done
-      return 1
-    }
+    echo "Here"
     wl_tmp=`./rctl get workload -o json | jq '.result[]|.name' |cut -d'"' -f2`
     WL_TMP_ARRAY=( $wl_tmp )
     set +e
