--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -28,9 +28,11 @@ steps:
       for workload; do [[ "$workload" == "$match" ]] && return 0; done
       return 1
     }
+    echo "Here"
     wl_tmp=`./rctl get workload -o json | jq '.result[]|.name' |cut -d'"' -f2`
     WL_TMP_ARRAY=( $wl_tmp )
     set +e
+    echo "Second"
     LookupWorkload $WORKLOAD_NAME "${WL_TMP_ARRAY[@]}"
     if [ $? -eq 1 ]; then
      set -e
