--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -26,14 +26,17 @@ steps:
       local workload match="wordpress-demo1"
       shift
       for workload; do [[ "$workload" == "$match" ]] && return 0; done
+      echo $workload
+      echo $match
       return 1
     }
     echo "Here"
-    wl_tmp=`./rctl get workload -o json | jq '.result[]|.name' |cut -d'"' -f2`
+    wl_tmp=`rctl get workload -o json | jq '.result[]|.name' |cut -d'"' -f2`
     WL_TMP_ARRAY=( $wl_tmp )
     set +e
     echo "Second"
     LookupWorkload $WORKLOAD_NAME "${WL_TMP_ARRAY[@]}"
+    echo $WORKLOAD_NAME
     if [ $? -eq 1 ]; then
      set -e
      ./rctl create workload $(workload_yaml)
