--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -32,19 +32,14 @@ steps:
     }
     echo "Here"
     wl_tmp=`${HOME}/rctl get workload -o json | jq '.result[]|.name' |cut -d'"' -f2`
-    echo "Njan" $ wl_tmp
+    echo "Njan" $wl_tmp
     WL_TMP_ARRAY=( $wl_tmp )
     set +e
     echo "Second"
-    LookupWorkload $WORKLOAD_NAME "${WL_TMP_ARRAY[@]}"
     echo $WORKLOAD_NAME
     echo ${WL_TMP_ARRAY[@]}
-    if [ $? -eq 1 ]; then
-     set -e
-     ${HOME}/rctl create workload $(workload_yaml)
-    else
-     ${HOME}/rctl update workload $(workload_yaml)
-    fi
+    echo "third"
+    ${HOME}/rctl create workload $(workload_yaml)
     ${HOME}/rctl publish workload $(workload)
     workload_status="Not Ready"
     workload_status_iterations=1
