--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 - master
 
 variables:
-  workload_yaml: {System.DefaultWorkingDirectory}/_ranjith-rafay_rafay-cicd-helpers/workload/helm3/manifests/workload-spec.yaml
+  workload_yaml: System.DefaultWorkingDirectory/_ranjith-rafay_rafay-cicd-helpers/workload/helm3/manifests/workload-spec.yaml
   workload: wordpress-demo1
 
 pool:
