--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -8,7 +8,6 @@ trigger:
 - master
 
 variables:
-  workload_yaml: System.DefaultWorkingDirectory/_ranjith-rafay_rafay-cicd-helpers/workload/helm3/manifests/workload-spec.yaml
   workload: wordpress-demo1
 
 pool:
@@ -17,6 +16,7 @@ pool:
 steps:
 
 - script: |
+    workingDirectory: $(System.DefaultWorkingDirectory/_ranjith-rafay_rafay-cicd-helpers/workload/helm3/manifests/workload-spec.yaml)
     export RCTL_API_KEY=$(RCTL_API_KEY)
     export RCTL_API_SECRET=$(RCTL_API_SECRET)
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
