--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -8,15 +8,19 @@ trigger:
 - master
 
 variables:
-  workload: wordpress-demo1
+  workload_yaml: System.DefaultWorkingDirectory/_ranjith-rafay_rafay-cicd-helpers/workload/helm3/manifests/workload-spec.yaml
+  workload: wordpress-demo1 
 
 pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '../workload/helm3/manifests/'
+    Contents: 'workload-spec.yaml'
+    TargetFolder: '$(Agent.DefaultWorkingDirectory)'
 - script: |
-    workingDirectory: $(System.DefaultWorkingDirectory/_ranjith-rafay_rafay-cicd-helpers/workload/helm3/manifests/workload-spec.yaml)
     export RCTL_API_KEY=$(RCTL_API_KEY)
     export RCTL_API_SECRET=$(RCTL_API_SECRET)
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
