--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 - master
 
 variables:
-  workload_yaml: $(System.DefaultWorkingDirectory)/_ranjith-rafay_rafay-cicd-helpers/workload/helm3/manifests/workload-spec.yaml
+  workload_yaml: $(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml
   workload: wordpress-demo1 
 
 pool:
@@ -18,9 +18,8 @@ steps:
 - task: CmdLine@2
   inputs:
     script: |
-      echo  '$(System.DefaultWorkingDirectory)'
-      dir
-      dir subfoldername
+      echo  '$(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml'
+
 - script: |
     workingDirectory:
     export RCTL_API_KEY=$(RCTL_API_KEY)
