--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -21,7 +21,6 @@ steps:
       echo  '$(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml'
 
 - script: |
-    workingDirectory:
     export RCTL_API_KEY=$(RCTL_API_KEY)
     export RCTL_API_SECRET=$(RCTL_API_SECRET)
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
@@ -29,7 +28,9 @@ steps:
     chmod 0755 ${HOME}/rctl
     set +e
     ${HOME}/rctl create workload $(workload_yaml)
+    echo "Done First"
     ${HOME}/rctl publish workload $(workload)
+    echo "Done Second"
     workload_status="Not Ready"
     workload_status_iterations=1
     while [ "$workload_status" != "Ready" ];
