Update azure-pipelines.yml for Azure Pipelines

--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -7,6 +7,11 @@
 trigger:
 - master
 
+resources:
+  repositories:
+  - repository: ranjith-rafay/rafay-cicd-helpers
+    type: git
+
 variables:
   workload_yaml: $(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml
   workload: wordpress-demo1
