--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -9,8 +9,9 @@ trigger:
 
 resources:
   repositories:
-  - repository: ranjith-rafay/rafay-cicd-helpers
+  - repository: ranjith-rafay
     type: git
+    name: /rafay-cicd-helpers
 
 variables:
   workload_yaml: $(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml
