--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -7,12 +7,12 @@
 trigger:
 - master
 
-resources:
-  repositories:
-  - repository: ranjith-rafay
-    type: git
-    name: rafay-cicd-helpers
-    ref: master
+#resources:
+  #repositories:
+  #- repository: ranjith-rafay
+    #type: git
+    #name: rafay-cicd-helpers
+    #ref: master
 
 variables:
   workload_yaml: $(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml
