--- a/workload/helm3/Azure-Devops/azure-pipelines.yml
+++ b/workload/helm3/Azure-Devops/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 
 resources:
   repositories:
-  - repository: ranjith-rafay
+  - repository: LearningDevOpS
     type: git
     name: rafay-cicd-helpers
     ref: master
