--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,8 @@ trigger:
 variables:
   workload_yaml: $(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml
   workload: wordpress-demo1
+  KubernetesCluster: 'ranjithsol'
+  AzureSubscription: 'aks-k8s'
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -24,16 +26,9 @@ steps:
     echo "Hello"
     chmod 0777 ${HOME}/rctl
     echo "Here"
-    wl_tmp=`./rctl get workload -o json | jq '.result[]|.name' |cut -d'"' -f2`
-    WL_TMP_ARRAY=( $wl_tmp )
     set +e
-    LookupWorkload $WORKLOAD_NAME "${WL_TMP_ARRAY[@]}"
-    if [ $? -eq 1 ]; then
-     set -e
-     ${HOME}/rctl create workload $(workload_yaml)
-    else
-     ${HOME}/rctl update workload $(workload_yaml)
-    fi
+    set -e
+    ${HOME}/rctl create workload $(workload_yaml)
     ${HOME}/rctl publish workload $(workload)
     workload_status="Not Ready"
     workload_status_iterations=1
