Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ trigger:
 
 resources:
   repositories:
-  - repository: LearningDevOpS
+  - repository: ranjith-rafay
     type: git
     name: rafay-cicd-helpers
     ref: master
