--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ resources:
   - repository: ranjith-rafay
     type: github
     name: rafay-cicd-helpers
+    endpoint: ranjith-rafay
     ref: master
 
 variables:
