Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
 - task: CmdLine@2
   inputs:
     script: |
-      echo  "${workload_yaml}"
+      echo $(workload_yaml)
 
 - script: |
     export RCTL_API_KEY=$(RCTL_API_KEY)
