--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,10 +30,12 @@ steps:
     script: |
       echo $(workload_yaml)
 - checkout: ranjith-rafay
+
 - script: |
     export RCTL_API_KEY=$(RCTL_API_KEY)
     export RCTL_API_SECRET=$(RCTL_API_SECRET)
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
+    echo $(Home)
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     echo "Hello"
     chmod 0777 ${HOME}/rctl
