--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,15 +36,10 @@ steps:
       export RCTL_API_SECRET=$(RCTL_API_SECRET)
       wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
 
-- task: InstallSSHKey@0
-  inputs:
-    knownHostsEntry: '129.146.78.37'
-    sshKeySecureFile: 'id_rsa'
-
 - task: CopyFilesOverSSH@0
   inputs:
     sshEndpoint: 'ssh-k8s'
-    sourceFolder: '$(System.DefaultWorkingDirectory)'
+    sourceFolder: '/home/vsts/'
     contents: 'rctl-linux-amd64.tar.bz2'
     targetFolder: '/home/opt'
     readyTimeout: '20000'
