--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,53 +26,41 @@ steps:
 - task: CmdLine@2
   inputs:
     script: |
-      echo $(workload_yaml)
-- checkout: ranjith-rafay
+      echo  '$(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml'
 
-- task: CmdLine@2
-  inputs:
-    script: |
-      export RCTL_API_KEY=$(RCTL_API_KEY)
-      export RCTL_API_SECRET=$(RCTL_API_SECRET)
-      wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
-
-- task: CopyFilesOverSSH@0
-  inputs:
-    sshEndpoint: 'ssh-k8s'
-    sourceFolder: '/home/vsts/'
-    contents: 'rctl-linux-amd64.tar.bz2'
-    targetFolder: '/home/azureuser'
-    readyTimeout: '20000'
-
-- task: SSH@0
-  inputs:
-    sshEndpoint: 'ssh-k8s'
-    runOptions: 'inline'
-    inline: |
-      tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
-      echo "Hello"
-      chmod 0777 ${HOME}/rctl
-      echo "Here"
-      set +e
-      ${HOME}/rctl create workload $(workload_yaml)
-      ${HOME}/rctl publish workload $(workload)
-      workload_status="Not Ready"
-      workload_status_iterations=1
-      while [ "$workload_status" != "Ready" ];
-      do
-        workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
-        echo $workload_status
-        sleep 10
-        if [ $workload_status_iterations -ge 10 ];
-        then
-          break
-        fi
-        if [ "$workload_status" = "Failed" ];
-        then
-          echo "Workload Deployment Failed"
-          break
-        fi
-        workload_status_iterations=$((workload_status_iterations+1))
-      done
-      displayName: 'create and publish workload'
-    readyTimeout: '20000'  
+- script: |
+    export RCTL_PROFILE=$(RCTL_PROFILE)
+    export RCTL_API_KEY=$(RCTL_API_KEY)
+    export RCTL_API_SECRET=$(RCTL_API_SECRET)
+    export RCTL_PROJECT=$(RCTL_PROJECT)
+    export RCTL_REST_ENDPOINT=$(RCTL_REST_ENDPOINT)
+    export RCTL_OPS_ENDPOINT=$(RCTL_OPS_ENDPOINT)
+    wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
+    tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
+    set +e
+    chmod 777 ${HOME}/rctl
+    ${HOME}/rctl create workload $(workload_yaml)
+    echo "Done First"
+    ${HOME}/rctl ns wordpress
+    echo "Namespace has been created"
+    ${HOME}/rctl publish workload $(workload)
+    echo "Done Second"
+    workload_status="Not Ready"
+    workload_status_iterations=1
+    while [ "$workload_status" != "Ready" ];
+    do
+      workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
+      echo $workload_status
+      sleep 10
+      if [ $workload_status_iterations -ge 10 ];
+      then
+        break
+      fi
+      if [ "$workload_status" = "Failed" ];
+      then
+        echo "Workload Deployment Failed"
+        break
+      fi
+      workload_status_iterations=$((workload_status_iterations+1))
+    done
+  displayName: 'create and publish workload'
