Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,7 @@ steps:
     ${HOME}/rctl config show
     ${HOME}/rctl create ns wordpress
     echo "Namespace has been created"
-    workload=cat worklad_yaml| grep -iw name | awk '{print $2}'
+    workload=`cat worklad_yaml| grep -iw name | awk '{print $2}'`
     echo "My Workload is" $(workload)
     ${HOME}/rctl create workload $(workload_yaml)
     echo "Done First"
