--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,9 +30,9 @@ steps:
 - task: CmdLine@2
   inputs:
     script: |
-      workload=$(cat $(workload_yaml) | grep -iw name | awk '{print $2}')
+      workload=$(cat $workload_yaml | grep -iw name | awk '{print $2}')
       echo "##vso[task.setvariable variable=workload;isOutput=true]$workload"
-      echo "My Workload" $(workload)
+      echo "My Workload" $workload
 
 - script: |
     export RCTL_PROFILE=$(RCTL_PROFILE)
