--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,13 +26,13 @@ steps:
   inputs:
     script: |
       echo  '$(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml'
-
-- task: CmdLine@2
+- task: Bash@3
   inputs:
+    targetType: 'inline'
     script: |
-      workload=$(cat $workload_yaml | grep -iw name | awk '{print $2}')
-      echo "##vso[task.setvariable variable=workload;isOutput=true]$workload"
-      echo "My Workload" $workload
+      cat workload_yaml | grep -iw name | awk '{print $2}' 
+      echo "##vso[task.setvariable variable= workload;isOutput=true]$workload"
+    displayName: workload
 
 - script: |
     export RCTL_PROFILE=$(RCTL_PROFILE)
@@ -44,6 +44,7 @@ steps:
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     set +e
+    echo "My Workload" $workload
     chmod 777 ${HOME}/rctl
     echo $(workload)
     ${HOME}/rctl config show
