--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      cat workload_yaml | grep -iw name | awk '{print $2}' 
+      cat $workload_yaml | grep -iw name | awk '{print $2}' 
       echo "##vso[task.setvariable variable= workload;isOutput=true]$workload"
     displayName: workload
 
