--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
     script: |
       workload=sudo cat $(workload_yaml) | grep -iw name | awk '{print $2}' 
       echo "##vso[task.setvariable variable=workload;isOutput=true]$workload"
-  displayName: workload
+  displayName: GetWorkload
 
 - script: |
     export RCTL_PROFILE=$(RCTL_PROFILE)
@@ -44,7 +44,7 @@ steps:
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     set +e
-    echo $(workload)
+    echo $(GetWorkload.workload)
     chmod 777 ${HOME}/rctl
     echo $(workload)
     ${HOME}/rctl config show
