--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,13 +26,14 @@ steps:
   inputs:
     script: |
       echo  '$(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml'
-- task: GetWorkLoad
+- task: Bash@3
   inputs:
     targetType: 'inline'
     script: |
       workload=sudo cat $(workload_yaml) | grep -iw name | awk '{print $2}' 
       echo "##vso[task.setvariable variable=workload;isOutput=true]$workload"
   displayName: GetWorkload
+  name: GetWorkload
 
 - script: |
     export RCTL_PROFILE=$(RCTL_PROFILE)
