--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ steps:
     script: |
       workload=sudo cat $(workload_yaml) | grep -iw name | awk '{print $2}' 
       echo "##vso[task.setvariable variable=workload;isOutput=true]$workload"
-      echo $workload
+      echo "$workload"
   displayName: GetWorkload
   name: GetWorkload
 
