--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,9 +30,10 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      workload=sudo cat $(workload_yaml) | grep -iw name | awk '{print $2}' 
-      echo "##vso[task.setvariable variable=workload;isOutput=true]$workload"
-      echo "$workload"
+      workload=$(sudo cat $(workload_yaml) | grep -iw name | awk '{print $2}')
+      #echo "##vso[task.setvariable variable=workload;isOutput=true]$workload"
+      echo "My output"
+      echo "${workload}"
   displayName: GetWorkload
   name: GetWorkload
 
