--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
     targetType: 'inline'
     script: |
       workload=$(sudo cat $(workload_yaml) | grep -iw name | awk '{print $2}')
-      #echo "##vso[task.setvariable variable=workload;isOutput=true]$workload"
+      echo "##vso[task.setvariable variable=workload;isOutput=true]$workload"
       echo "My output"
       echo "${workload}"
   displayName: GetWorkload
@@ -48,9 +48,9 @@ steps:
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     set +e
     echo "Start"
-    echo "$(GetWorkload.workload)"
+    echo "${GetWorkload.workload}"
     echo "Go"
-    echo "$(workload)"
+    echo "${workload""
     chmod 777 ${HOME}/rctl
     echo $(workload)
     ${HOME}/rctl config show
