Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ steps:
     echo "Start"
     echo "${GetWorkload.workload}"
     echo "Go"
-    echo "${workload""
+    echo "${workload}"
     chmod 777 ${HOME}/rctl
     echo $(workload)
     ${HOME}/rctl config show
