--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
     targetType: 'inline'
     script: |
       workload=$(sudo cat $(workload_yaml) | grep -iw name | awk '{print $2}')
-      #echo "##vso[task.setvariable variable=workload]$workload"
+      echo "##vso[task.setvariable variable=workload]$workload"
       echo "My output"
       echo "${workload}"
   displayName: GetWorkload
