Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,12 @@ steps:
     echo "Done Second"
     workload_status="Not Ready"
     workload_status_iterations=1
+    workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
+    if [ "$workload_status" = "Ready" ];
+      then
+        echo "Workload is already deployed and running"
+        break
+    fi
     while [ "$workload_status" != "Ready" ];
     do
       workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
