Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,9 +50,9 @@ steps:
     echo "Go"
     echo "${workload}"
     chmod 777 ${HOME}/rctl
-    echo $(workload)
     ${HOME}/rctl config show
     workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
+    echo "$workload_status"
     if [ "$workload_status" = "Ready" ];
     then
       echo "Workload is already deployed and running"
