--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,36 +48,36 @@ steps:
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     set +e
     echo "Go"
-    echo "${GetWorkload.workload}"
+    echo $(workload)
     chmod 777 ${HOME}/rctl
     ${HOME}/rctl config show
-    workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
+    workload_status=${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'
     echo $(workload_status)
     if [ "$workload_status" = "Ready" ];
     then
       echo "Workload is already deployed and running"
       exit 0
-    fi
-    ${HOME}/rctl create workload $(workload_yaml)
-    echo "Done First"
-    ${HOME}/rctl publish workload $(workload)
-    echo "Done Second"
-    workload_status="Not Ready"
-    workload_status_iterations=1
-    while [ "$workload_status" != "Ready" ];
-    do
-      workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
-      echo $workload_status
-      sleep 10
-      if [ $workload_status_iterations -ge 10 ];
-      then
-        break
-      fi
-      if [ "$workload_status" = "Failed" ];
-      then
-        echo "Workload Deployment Failed"
-        break
-      fi
-      workload_status_iterations=$((workload_status_iterations+1))
-    done
+    else
+      ${HOME}/rctl create workload $(workload_yaml)
+      echo "Done First"
+      ${HOME}/rctl publish workload $(workload)
+      echo "Done Second"
+      workload_status="Not Ready"
+      workload_status_iterations=1
+      while [ "$workload_status" != "Ready" ];
+      do
+        workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
+        echo $workload_status
+        sleep 10
+        if [ $workload_status_iterations -ge 10 ];
+        then
+          break
+        fi
+        if [ "$workload_status" = "Failed" ];
+        then
+          echo "Workload Deployment Failed"
+          break
+        fi
+        workload_status_iterations=$((workload_status_iterations+1))
+      done
   displayName: 'create and publish workload'
