Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ steps:
     chmod 777 ${HOME}/rctl
     ${HOME}/rctl config show
     workload_status="Not Ready"
-    workload_status=${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'
+    workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
     echo $(workload_status)
     if [ "$workload_status" = "Ready" ];
     then
