--- a/workload/helm3/manifests/apache-custom-values.yaml
+++ b/workload/helm3/manifests/apache-custom-values.yaml
@@ -5,8 +5,8 @@ service:
     ## service.beta.kubernetes.io/aws-load-balancer-internal: "true"
   ## Service type
   ##
-  type: LoadBalancer
-  #type: NodePort
+  #type: LoadBalancer
+  type: NodePort
   ## HTTP Port
   ##
   port: 80
