--- a/workload/helm3/manifests/workload-spec.yaml
+++ b/workload/helm3/manifests/workload-spec.yaml
@@ -3,5 +3,5 @@ namespace: wordpress
 project: defaultproject
 type: Helm3
 clusters: "ranjithsoln"
-payload: "./apache-8.0.0-rafay.tgz"
-values: "./apache-custom-values.yaml"
+payload: "./wordpress-9.0.3.tgz"
+values: "./wordpress-values.yaml"
