--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ resources:
 
 variables:
   workload_yaml: $(System.DefaultWorkingDirectory)/workload/helm3/manifests/workload-spec.yaml
-
+  create_ns_yaml: $(System.DefaultWorkingDirectory)/workload/helm3/manifests/rafay_create_ns.yaml
 pool:
   vmImage: 'ubuntu-latest'
 
@@ -50,6 +50,8 @@ steps:
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     set +e
+    sed s/%ns_nameE%/${namespace}/g \ $(create_ns_yaml)  > create_ns.yaml
+    cat create_ns.yaml
     echo "Go"
     echo $(workload)
     chmod 777 ${HOME}/rctl
