--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ steps:
     wget -O ${HOME}/rctl-linux-amd64.tar.bz2 https://s3-us-west-2.amazonaws.com/rafay-prod-cli/publish/rctl-linux-amd64.tar.bz2
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     set +e
+    echo $(namespace)
     `sudo sed s/%ns_name%/$namespace/g $(create_ns_yaml)  > create_ns.yaml`
     cat create_ns.yaml
     echo "Go"
