--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,8 +57,9 @@ steps:
     tar -C ${HOME} -xf ${HOME}/rctl-linux-amd64.tar.bz2
     set +e
     `sudo sed s/%ns_name%/$(namespace)/g $(create_ns_yaml)  > create_ns.yaml`
-    cat create_ns.yaml | sudo sed s/%cluster_name%/$(cluster)/g
+    cat create_ns.yaml | sudo sed s/%cluster_name%/$(cluster)/g > create_ns.yaml
     echo "Go"
+    cat create_ns.yaml
     echo $(workload)
     echo $(namespace)
     echo $(cluster)
