--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,7 +67,7 @@ steps:
     ${HOME}/rctl namespace list > /tmp/namespace
     grep -i $(workload) /tmp/namespace > /dev/null 2>&1
     if [ $? -eq 1 ]; then
-      ${HOME}/rctl namespace create create_ns.yaml
+      ${HOME}/rctl create ns create_ns.yaml
     fi
     rm /tmp/namespace
     workload_status=`${HOME}/rctl status workload $(workload) -o json|jq .result[].status|tr -d '"'`
