--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ steps:
     ${HOME}/rctl config show
     ${HOME}/rctl get namespace | awk {'print $2'}| grep -v NAME | awk '!/^$/' > /tmp/getns.out
     cat /tmp/getns.out
-    grep -i $(workload) /tmp/getns.out > /dev/null 2>&1
+    grep -i $(namespace) /tmp/getns.out > /dev/null 2>&1
     if [ $? -eq 1 ]; then
       ${HOME}/rctl create ns -f ns_create.yaml
       ${HOME}/rctl publish ns $(namespace)
