--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ steps:
     cat /tmp/getns.out
     grep -i $(namespace) /tmp/getns.out > /dev/null 2>&1
     if [ $? -eq 1 ]; then
-      ${HOME}/rctl create ns -f ns_create.yaml
+      ${HOME}/rctl create ns -f create_ns.yaml
       ${HOME}/rctl publish ns $(namespace)
     fi
     rm /tmp/getns.out
